[package]
name = "core"
version = "0.1.0"
authors = ["Alec Goncharow <Alec.Goncharow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hermes = { path = "../hermes" }
pantheon = { path = "../pantheon" }
enum_dispatch = "0.3"
