[package]
name = "engine"
version = "0.1.0"
authors = ["Alec Goncharow <Alec.Goncharow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit="0.24"
futures = "0.3"
bytemuck = "1.4"
image = "0.23"
anyhow = "1.0" 

[dependencies.wgpu]
version = "0.7"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.6"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "math"
harness = false
