[package]
name = "game"
version = "0.1.0"
authors = ["Alec Goncharow <Alec.Goncharow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pantheon = { path = "../pantheon" }
hermes = { path = "../hermes" }
core = { path = "../core" } 
rand = "0.8.3"
enum_dispatch = "0.3"
