[package]
name = "game"
version = "0.1.0"
authors = ["Alec Goncharow <Alec.Goncharow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pantheon = { path = "../pantheon" }
hermes = { path = "../hermes" }
rand = { version = "0.8", features = ["small_rng"] }
enum_dispatch = "0.3"
bytemuck = "1.4"

[dependencies.wgpu]
version = "0.12"
features = ["spirv"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"
