[package]
name = "hermes"
version = "0.1.0"
authors = ["Alec Goncharow <alec.goncharow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
parking_lot = "0.11.1"
