[package]
name = "my_engine"
version = "0.1.0"
authors = ["Alec Goncharow <Alec.Goncharow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano="0.19.0"
vulkano-shaders="0.19.0"
winit="0.22"
vulkano-win="0.19.0"
#vulkano = { git =  "https://github.com/vulkano-rs/vulkano" }
#vulkano-shaders = { git =  "https://github.com/vulkano-rs/vulkano" }
#vulkano-win = { git =  "https://github.com/vulkano-rs/vulkano" }
