[package]
name = "pantheon"
version = "0.1.2"
authors = ["Alec Goncharow <Alec.Goncharow@gmail.com>"]
edition = "2018"
description = "An opinionated WIP/Experimental 3D game engine"
repository = "https://github.com/AlecGoncharow/zeus-rs"
license =  "MIT OR Apache-2.0"
categories = ["game-engines", "graphics", "rendering"]
readme = "README.md"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
futures = "0.3"
bytemuck = "1.4"
image = "0.23"
anyhow = "1.0"
shaderc = "0.7"
notify = "4.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
bitflags = "1.3"
smallvec = "1.8"
naga = "0.11"

[dependencies.wgpu]
version = "0.15"
features = ["naga"]

[dependencies.bumpalo]
version = "3.9"
features = ["collections"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "math"
harness = false

